[tool.poetry]
name = "df-lng-lat-timezones"
version = "0.1.0"
description = ""
authors = ["ringsaturn <ringsaturn.me@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.0"
polars = "^0.16.18"
tzfpy = "^0.15.0"
timezonefinder = "^6.2.0"
jupyterlab = "^3.6.7"
citiespy = "^0.3.5"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
